# numerai_quant_ml

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: local_smoke.yaml  portfolio_medium.yaml  portfolio_medium_catboost.yaml  portfolio_medium_catboost_v2.yaml  portfolio_medium_catboost_v3.yaml  portfolio_medium_catboost_v4.yaml  portfolio_medium_mlx_mlp.yaml  portfolio_medium_mlx_mlp_v2.yaml  portfolio_medium_mlx_mlp_v3.yaml  portfolio_medium_mlx_mlp_v4.yaml  portfolio_medium_xgb.yaml  portfolio_medium_xgb_features.yaml  strong_benchmark_catboost.yaml  strong_benchmark_mlx_mlp.yaml
docs/: COLAB.md  research_writeup.tex
docs/benchmark_60_eras/: report.md
docs/sample_artifacts/best_medium_reblend/: model_leaderboard.csv  report.md  (+1 more)
notebooks/: 01_eda_and_validation.ipynb
numerai-quant-ml/: .gitignore  README.md  pyproject.toml
numerai-quant-ml/configs/: baseline.yaml
numerai-quant-ml/scripts/: download_data.py  predict_live.py  run_portfolio_pipeline.py  train_ensemble.py  validate_baseline.py
numerai-quant-ml/tests/: test_prediction_format.py  test_validation.py
scripts/: backtest_walkforward.py  download_data.py  reblend_walkforward.py  submit_predictions.py  train_baseline.py  validate_baseline.py
src/numerai_quant/: __init__.py  artifacts.py  config.py  data.py  ensemble.py  features.py  metrics.py  mlx_models.py  modeling.py  reblend.py  reporting.py  research.py  validation.py
tests/: test_download_plan.py  test_ensemble_bundle.py  test_features.py  test_metrics.py  test_prediction_format.py  test_reblend.py  test_validation.py
(+11 files in other folders)
