[project]
name = "numerai-quant-ml"
version = "0.1.0"
description = "Reproducible Numerai quant-ML research pipeline with era-aware validation, tree ensembles, neutralization, and live prediction support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "lightgbm>=4.0.0",
    "matplotlib>=3.8.0",
    "numerapi>=2.19.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0.0"]
catboost = ["catboost>=1.2.0"]
mlx = ["mlx>=0.29.2"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numerai_quant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
